# AutoApply-Agent

./: .cursorrules  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  autoapply.pem  docker-compose.yml  pyproject.toml  raw_job_output.txt  ruff_errors.txt
.agents/workflows/: deploy-aws.md  pre-push.md  reset-db.md  update-gemini-model.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 16867d038b9a_add_system_config.py  3bb3134a53ef_add_resume_table.py  5de8045ac12f_add_applicationrun_and_portalcredential_.py
android/: README.md  build.gradle.kts  local.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/autoapply/agent/: AutoApplyApp.kt  MainActivity.kt
android/app/src/main/java/com/autoapply/agent/data/local/: AppDatabase.kt  JobDao.kt  JobEntity.kt
android/app/src/main/java/com/autoapply/agent/di/: DatabaseModule.kt  NetworkModule.kt
android/app/src/main/res/values/: strings.xml  themes.xml
app/: config.py  main.py
app/api/v1/: companies.py  jobs.py  prompt_config.py  refine.py  resumes.py  scrape.py
app/db/: base.py  session.py
app/models/: __init__.py  company.py  job.py  models.py  scrape_run.py
app/schemas/: company.py  job.py  prompt_config.py  refine.py  resume.py  scrape.py
app/services/: apply_agent.py  llm_parser.py  refinery.py  scraper.py
deploy/: deploy.sh  ec2-user-data.sh
tests/: conftest.py  test_android_integration.py  test_api.py  test_db_uniqueness.py  test_resumes.py
(+23 files in other folders)
